--- a/about.html
+++ b/about.html
@@ -1,5 +1,13 @@
 <!DOCTYPE HTML>
     <head>
+                <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GKY8WD163E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-GKY8WD163E');
+</script>
         <title>Julia's Portfolio</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
